fix: markdown heading spacing

--- a/components/markdown/markdown.module.scss
+++ b/components/markdown/markdown.module.scss
@@ -9,19 +9,19 @@
   --space: #{$spacing-06};
 }
 
-.h1 {
+.h1.h1 {
   --space: #{$spacing-12};
   margin-top: var(--space);
   @include carbon--type-style('expressive-heading-05', true);
 }
 
-.h2 {
+.h2.h2 {
   --space: #{$spacing-11};
   margin-top: var(--space);
   @include carbon--type-style('expressive-heading-04', true);
 }
 
-.h3 {
+.h3.h3 {
   --space: #{$spacing-10};
   margin-top: var(--space);
   @include carbon--type-style('expressive-heading-03', true);
